info pag principales

--- a/SUBCARPETAS/africaf.html
+++ b/SUBCARPETAS/africaf.html
@@ -89,7 +89,61 @@
             Africa y su mundo FUNGI
           </h3>
         </div>
-    
+    <div class="m-2 space-y-2">
+
+                  <div
+                    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
+                    tabindex="1">
+                    <div class="flex cursor-pointer items-center justify-between">
+                      <span>Ganoderma applanatum (Hongo artista africano)
+</span>
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+                        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180" />
+                    </div>
+                    <div
+                      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
+                     Presente en bosques tropicales y subtropicales de África central, occidental y oriental, Ganoderma applanatum es un hongo perenne que crece principalmente sobre troncos viejos, raíces expuestas o árboles debilitados. Prefiere ambientes húmedos, sombra constante y temperaturas cálidas. Su cuerpo fructífero duro y leñoso puede desarrollarse durante varios años, formando capas concéntricas que cuentan la historia del crecimiento anual, como los anillos de un árbol.
+ Este hongo es fundamental para los ecosistemas forestales porque actúa como un descomponedor de madera avanzada, capaz de degradar lignina y dejar la madera como polvo fino. Su presencia acelera la muerte y la regeneración del bosque, permitiendo que árboles jóvenes reciban luz y nutrientes. Medicinalmente, aunque no tan famoso como su pariente asiático Ganoderma lucidum (reishi), es utilizado en África en infusiones para afecciones respiratorias, fatiga crónica y como tónico general. También es utilizado por artesanos locales: la superficie blanca interna se marca fácilmente, permitiendo dibujar sobre ella, lo que ha convertido al hongo artista en un curioso soporte natural para obras tradicionales. Su presencia indica la salud de un ecosistema forestal maduro, pues solo prospera en bosques longevos con madera abundante en descomposición.
+
+                    </div>
+                  </div>
+
+                  <div
+                    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
+                    tabindex="2">
+                    <div class="flex cursor-pointer items-center justify-between">
+                      <span>Lentinus sajor-caju (Hongo ostra africano)
+</span>
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+                        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180" />
+                    </div>
+                    <div
+                      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
+                      Ampliamente distribuido por África oriental, meridional y partes del oeste, este hongo crece en bosques tropicales, sabanas húmedas y zonas de transición donde abunda la madera muerta. Prefiere temperaturas cálidas y ambientes bien ventilados, pero con humedad considerable, especialmente durante la temporada de lluvias. Lentinus sajor-caju se desarrolla sobre troncos caídos y ramas en descomposición, actuando como un poderoso descomponedor de lignina y celulosa. Su función ecológica es esencial: acelera la formación de suelo fértil y la liberación de nutrientes que alimentan nuevas generaciones de plantas.
+ Gastronómicamente, este hongo es muy valorado: su textura es firme y agradable, y su sabor más intenso que el de otros Pleurotus. Hoy es uno de los hongos más fáciles de cultivar en África, lo que ha permitido impulsar economías rurales y mejorar dietas locales. Tiene propiedades medicinales documentadas, incluyendo efectos inmunoestimulantes y antioxidantes. En varias comunidades africanas se le atribuye la capacidad de fortalecer la sangre y mejorar la recuperación tras enfermedades febriles. Su adaptabilidad a diversos sustratos, como bagazo, serrín o pulpa vegetal, lo convierte en un pilar tanto ecológico como económico en el continente.
+
+                    </div>
+                  </div>
+
+                  <div
+                    class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
+                    tabindex="3">
+                    <div class="flex cursor-pointer items-center justify-between">
+                      <span>Termitomyces titanicus</span>
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+                        class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180" />
+                    </div>
+                    <div
+                      class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
+                      Este hongo, famoso por producir algunos de los cuerpos fructíferos más grandes del mundo, es una auténtica maravilla del continente africano. Se encuentra principalmente en regiones tropicales y subtropicales del África central y oriental, especialmente en Zambia, Tanzania y la República Democrática del Congo. Vive en simbiosis con termitas del género Macrotermes, habitando los montículos que ellas construyen. Allí, dentro de cámaras húmedas y cálidas, las termitas cultivan este hongo para alimentarse, generando un microclima ideal: temperatura relativamente estable, alta humedad y una provisión constante de material vegetal descompuesto.
+ Su presencia contribuye a la degradación de materia vegetal dura que otros organismos no pueden procesar, acelerando el ciclo de nutrientes en suelos empobrecidos. Para las comunidades humanas, T. titanicus es un tesoro gastronómico: su carne es espesa, delicada y tiene un sabor umami notable que recuerda a la combinación entre carne blanca y nueces. Es muy apreciado en mercados locales, donde puede venderse fresco o seco. A nivel medicinal, aunque no se usa formalmente en la farmacología moderna, en la medicina tradicional se consume como tónico nutritivo para fortalecer el cuerpo, especialmente en épocas de escasez o enfermedad. Debido a su dependencia absoluta de las termitas, no se cultiva artificialmente, lo que lo hace aún más valioso y profundamente ligado a los ecosistemas naturales del África tropical.
+
+                    </div>
+                  </div>
+
+                  
+
+                </div>
 
         <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
           <div class="flex flex-wrap justify-center">
