--- a/africa.html
+++ b/africa.html
@@ -37,15 +37,16 @@
   <input class="hidden" type="checkbox" id="menu-toggle" />
 
   <div class="menu" id="menu">
-    <ul>
+     <ul>
       <li><a href="index.html">Presentación</a></li>
       <li><a href="europa.html">Europa</a></li>
       <li><a href="asia.html">Asia</a></li>
-      <li><a href="norteamerica.html">Norteamérica</a></li>
+      <li><a href="america.html">América</a></li>
       <li><a href="oceania.html">Oceanía</a></li>
       <li><a href="africa.html">África</a></li>
-      <li><a href="sudamerica.html">Sudamerica</a></li>
+      <li><a href="antartida.html">Antartida</a></li>
     </ul>
+  </div>
   </div>
 </nav>
 
@@ -55,7 +56,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-    style="background-image: url(img/europa.jpg)">
+    style="background-image: url(img/africa.jpg)">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -91,7 +92,9 @@
                       class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
                   </div>
                   <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    Siberia y las regiones árticas del norte asiático parecen diseñadas para poner a prueba la vida...
+                    El norte africano está dominado por el desierto del Sahara, el más grande del mundo. Su clima es extremadamente árido, con temperaturas diurnas muy altas y noches frías. La vegetación es escasa, limitada a plantas xerófitas como acacias, tamarindos y pequeños arbustos adaptados a la sequía. La fauna incluye dromedarios, zorros fénec, jerbos, reptiles y aves migratorias que atraviesan la región.
+ Las zonas urbanizadas se concentran en la franja mediterránea: El Cairo, Túnez, Casablanca, Argel. Aun así, grandes extensiones del Sahara permanecen prácticamente libres de ocupación humana, excepto por rutas nómadas y oasis dispersos.
+
                   </div>
                 </div>
 
@@ -102,7 +105,9 @@
                       class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
                   </div>
                   <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    El sur asiático es una explosión de vida...
+                   El sur del continente destaca por tener climas más templados, sabanas extensas y algunas regiones mediterráneas como la zona del Cabo. La flora incluye fynbos sudafricano —un ecosistema altamente endémico— y pastizales con acacias. La fauna es característica: elefantes, rinocerontes, leones, antílopes, jirafas y una enorme diversidad de aves.
+ Las ciudades principales como Johannesburgo, Ciudad del Cabo, Pretoria ocupan áreas considerables, pero aún existen reservas naturales muy amplias, como el Parque Kruger, donde el impacto humano es mínimo.
+
                   </div>
                 </div>
 
@@ -113,7 +118,10 @@
                       class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
                   </div>
                   <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    Lorem ipsum dolor sit amet...
+                    En el este sobresale el Gran Valle del Rift, con ecosistemas como sabanas, montañas volcánicas (Kilimanjaro), bosques tropicales y lagos alcalinos. El clima varía desde húmedo ecuatorial hasta semiárido. La flora es rica en árboles de sabana, palmeras y bosques montanos.
+ La fauna es de las más icónicas: cebras, ñus, guepardos, hienas, flamencos en los lagos y primates como los gorilas de montaña.
+ Ciudades como Nairobi, Addis Abeba, Dar es Salaam concentran población, pero gran parte del territorio —especialmente reservas y parques nacionales— se mantiene poco alterado por la actividad humana.
+
                   </div>
                 </div>
 
@@ -124,11 +132,28 @@
                       class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
                   </div>
                   <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    texto
+                   El oeste africano combina selvas tropicales densas, sabanas húmedas y zonas de transición secas hacia el Sahara. Países como Sierra Leona, Liberia o Costa de Marfil cuentan con bosques lluviosos ricos en árboles de gran porte, lianas y epífitas.
+ La fauna incluye chimpancés, leopardos, antílopes forestales y gran cantidad de aves y anfibios.
+ La urbanización se concentra en ciudades costeras como Lagos, Dakar y Accra, pero aún quedan bosques primarios y reservas aunque fragmentados por agricultura y expansión urbana.
+
+                  </div>
+                  
+              </div>
+              <div class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white" tabindex="5">
+                  <div class="flex cursor-pointer items-center justify-between">
+                    <span>Centro</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+                         class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180" />
+                  </div>
+                  <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible 
+                              group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
+                    El corazón del continente está cubierto por la selva del Congo, el segundo pulmón verde del planeta. Su clima es ecuatorial: extremadamente húmedo y cálido. La vegetación es exuberante, con árboles gigantes, helechos, orquídeas, lianas y una rica biodiversidad.
+ La fauna incluye gorilas, okapis, búfalos del bosque, elefantes de selva y gran cantidad de anfibios e insectos.
+ La ocupación humana es reducida fuera de ciudades como Kinshasa o Yaoundé, y grandes extensiones continúan prácticamente intactas.
+
                   </div>
                 </div>
-
-              </div>
+                </div>
 
               <div class="text-center mt-6">
   <a href="SUBCARPETAS/africaf.html" class="btn-hongos">
