--- a/america.html
+++ b/america.html
@@ -37,10 +37,10 @@
       <li><a href="index.html">Presentación</a></li>
       <li><a href="europa.html">Europa</a></li>
       <li><a href="asia.html">Asia</a></li>
-      <li><a href="norteamerica.html">Norteamérica</a></li>
+      <li><a href="america.html">América</a></li>
       <li><a href="oceania.html">Oceanía</a></li>
       <li><a href="africa.html">África</a></li>
-      <li><a href="sudamerica.html">Sudamérica</a></li>
+      <li><a href="antartida.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -53,7 +53,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-     style="background-image: url(img/europa.jpg)">
+     style="background-image: url(img/NorteAmeriaca.jpg)">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -76,7 +76,7 @@
         <div class="text-center mt-12">
           <h3 class="text-3xl font-semibold text-blueGray-700 flex justify-center items-center gap-2 uppercase">
             <i class="fas fa-map-marker-alt text-blueGray-400"></i>
-            Norteamérica
+           América
           </h3>
         </div>
 
@@ -99,10 +99,12 @@
                   <div class="invisible h-auto max-h-0 opacity-0 transition-all 
                               group-focus:visible group-focus:max-h-screen group-focus:opacity-100 
                               group-focus:duration-1000">
-                    Siberia y las regiones árticas del norte asiático parecen diseñadas para poner a prueba la vida...
-                  </div>
-                </div>
+                    El clima varía entre subártico, ártico y templado frío. Predominan tundras, taigas y bosques boreales. La flora se compone de coníferas, líquenes, musgos, arbustos resistentes y plantas adaptadas a inviernos prolongados.
+ La fauna incluye osos polares, caribúes, lobos, zorros árticos, alces y una avifauna de migración masiva.
+ Las ciudades principales están en la zona templada: Toronto, Montreal, Vancouver. En el norte ártico la presencia humana es mínima, con vastas zonas vírgenes.
 
+                </div>
+</div>
                 <!-- SUR -->
                 <div class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white" tabindex="2">
                   <div class="flex cursor-pointer items-center justify-between">
@@ -112,7 +114,10 @@
                   </div>
                   <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible 
                               group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    El sur asiático es una explosión de vida...
+                   El clima es variado: templado, frío, subpolar y desértico según la región. La flora incluye bosques templados húmedos (Patagonia), estepas, praderas y matorrales.
+ La fauna presenta pumas, guanacos, cóndores, zorros, pingüinos y especies endémicas de la estepa.
+ Las ciudades principales están en regiones templadas: Buenos Aires, Santiago, Montevideo. La Patagonia sigue teniendo grandes territorios casi libres del humano.
+
                   </div>
                 </div>
 
@@ -125,7 +130,10 @@
                   </div>
                   <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible 
                               group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    Lorem ipsum dolor sit amet...
+                    Climas que van desde tropical (Caribe) a templado húmedo y boreal en Canadá. Selvas, manglares, pantanos (Everglades), bosques templados y costas ricas en biodiversidad.
+ La fauna incluye manatíes, aves migratorias, peces costeros, caimanes, osos negros y una amplia variedad de insectos y anfibios.
+ Las grandes ciudades costeras como Nueva York, Río de Janeiro, Buenos Aires han transformado la zona, pero aún existen reservas costeras y marinas importantes.
+
                   </div>
                 </div>
 
@@ -138,7 +146,10 @@
                   </div>
                   <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible 
                               group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    texto
+                   Aquí encontramos la Cordillera de los Andes y las Montañas Rocosas, creando enormes gradientes de clima y vegetación. Desde desiertos como Atacama hasta bosques templados de coníferas en Canadá y selvas en Mesoamérica.
+ La fauna incluye pumas, osos pardos, cóndores, venados, llamas, aves rapaces y una biodiversidad marina muy rica en el Pacífico.
+ Ciudades importantes como Los Ángeles, Lima, Vancouver, Santiago concentran población, pero aún existen enormes zonas montañosas y boscosas sin urbanizar.
+
                   </div>
                 </div>
 
@@ -151,7 +162,11 @@
                   </div>
                   <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible 
                               group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    texto
+                    El clima es tropical y subtropical mayormente, con selvas, bosques nubosos, manglares y volcanes activos.
+ La flora es muy diversa: ceibas, árboles de caucho, palmas, bromelias y orquídeas abundan.
+ La fauna incluye jaguares, monos, tucanes, quetzales, serpientes y una altísima variedad de insectos.
+ Algunas ciudades grandes como Ciudad de México ocupan extensiones considerables, pero aún existen corredores biológicos y selvas densas parcialmente intactas.
+
                   </div>
                 </div>
 
@@ -159,7 +174,7 @@
 
               <!-- BOTÓN HONGOS (VERDE MUSGOSO + EFECTO) -->
               <div class="text-center mt-6">
-  <a href="SUBCARPETAS/norteamericaf.html" class="btn-hongos">
+  <a href="SUBCARPETAS/americaf.html" class="btn-hongos">
     Ver Hongos
   </a>
 </div>
