--- a/antartida.html
+++ b/antartida.html
@@ -38,13 +38,14 @@
   <input class="hidden" type="checkbox" id="menu-toggle" />
 
   <div class="menu" id="menu">
-    <ul>
+   <ul>
       <li><a href="index.html">Presentación</a></li>
+      <li><a href="europa.html">Europa</a></li>
       <li><a href="asia.html">Asia</a></li>
-      <li><a href="norteamerica.html">Norteamérica</a></li>
+      <li><a href="america.html">América</a></li>
       <li><a href="oceania.html">Oceanía</a></li>
       <li><a href="africa.html">África</a></li>
-      <li><a href="sudamerica.html">Sudamérica</a></li>
+      <li><a href="antartida.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -73,7 +74,7 @@
         <div class="text-center mt-12">
           <h3 class="text-3xl font-semibold text-blueGray-700 flex justify-center items-center gap-2 uppercase">
             <i class="fas fa-map-marker-alt text-blueGray-400"></i>
-            Sudamérica
+           Antártida
           </h3>
         </div>
 
@@ -93,7 +94,11 @@
                          class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
                   </div>
                   <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100">
-                    Siberia y las regiones árticas del norte asiático parecen diseñadas para poner a prueba la vida...
+                    El norte es la puerta más amable del continente, si es que algo en la Antártida puede considerarse amable. Aquí el clima es “menos brutal”: veranos que rozan temperaturas por encima de 0 °C y vientos algo más suaves. Esta zona recibe más luz solar y tiene un contacto directo con aguas ricas en nutrientes, lo que la vuelve un imán para miles de animales.
+La fauna se reúne en grandes colonias: pingüinos de Adelia, papúa y barbijo van y vienen de sus nidos; focas y lobos marinos descansan en los bordes de los témpanos; aves como skúas, petreles y albatros sobrevuelan el mar. En las aguas costeras, las ballenas jorobadas y minke realizan migraciones espectaculares para alimentarse del abundante kril.
+En cuanto a la flora, es aquí donde se encuentran las únicas dos plantas vasculares del continente, pequeñas y discretas: Deschampsia antarctica y Colobanthus quitensis. También crecen musgos y líquenes, que forman manchas verdes y anaranjadas sobre rocas expuestas durante el verano.
+La mayor actividad humana se concentra en bases como Esperanza, Carlini, Palmer o Rothera, aunque incluso allí, la Antártida sigue dominando el paisaje con una fuerza absoluta.
+
                   </div>
                 </div>
 
@@ -105,7 +110,11 @@
                          class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
                   </div>
                   <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100">
-                    El sur asiático es una explosión de vida...
+                  El sur es otra historia: aquí reina el silencio absoluto. Las temperaturas pueden caer por debajo de –60 ºC, el viento sopla sin descanso y la humedad es tan baja que se lo considera técnicamente un desierto. Es la región donde el hielo tiene mayor espesor y donde casi no existe vida visible.
+La fauna prácticamente desaparece. Ningún pingüino ni foca se aventura tan al sur —no hay comida, no hay luz suficiente, no hay agua libre. Solo algunos invertebrados microscópicos, como tardígrados y ácaros diminutos, logran sobrevivir enterrados en grietas del hielo o entre los pocos suelos expuestos.
+La flora es mínima, casi simbólica. No hay plantas vasculares; solo existen algunos líquenes extremadamente resistentes que pueden permanecer inactivos durante años, esperando un poco de humedad para reactivarse.
+El ecosistema del sur es más una demostración de límite biológico que un espacio funcional para la vida. Todo aquí gira en torno al hielo, la luz y un entorno que parece detenido en otro planeta.
+
                   </div>
                 </div>
 
@@ -117,7 +126,11 @@
                          class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
                   </div>
                   <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100">
-                    Lorem ipsum dolor sit amet...
+                    El este antártico es la región más fría, seca y estable de todo el continente. Su territorio es tan amplio que se lo considera un gigante blanco, sumido en inviernos que parecen no terminar nunca.
+La costa, sin embargo, cuenta otra historia: allí llegan pingüinos emperadores, que crían en colonias enormes sobre el hielo marino. También aparecen focas cangrejeras, focas de Weddell y aves que sobrevuelan las aguas buscando alimento. Más lejos, sobre el hielo interior, la vida vuelve a desvanecerse.
+La flora se reduce principalmente a líquenes que resisten condiciones extremas y a algunos musgos aislados en microambientes templados por rocas oscuras. Curiosamente, el este alberga algunos de los líquenes más longevos de todo el planeta, capaces de crecer apenas unos milímetros por siglo.
+Pocas bases científicas se aventuran a esta región debido a su aislamiento, pero las que existen parecen pequeños puestos futuristas perdidos en una blancura interminable.
+
                   </div>
                 </div>
 
@@ -129,7 +142,11 @@
                          class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
                   </div>
                   <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100">
-                    texto
+                    El oeste es dinámico, cambiante, casi inquieto. Aquí el hielo se mueve, avanza y retrocede con más frecuencia que en el resto del continente. Las costas son un hervidero de vida: pingüinos Adelia, pingüinos emperador, focas leopardo y focas de Weddell encuentran alimento abundante en las aguas del mar de Ross.
+La flora también se hace notar dentro de lo posible: algunos musgos más desarrollados que en el este sobreviven gracias a la humedad del verano y a las temperaturas levemente más altas.
+El ecosistema marino es especialmente rico, con poblaciones densas de kril, peces antárticos adaptados a la congelación y una fauna de invertebrados que prospera bajo el hielo marino estacional.
+ Este es uno de los lugares donde la relación entre hielo y océano se vuelve más evidente: si el hielo retrocede, la luz aumenta; si la luz aumenta, florece el fitoplancton… y con él, toda la cadena de vida.
+
                   </div>
                 </div>
 
@@ -141,7 +158,10 @@
                          class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
                   </div>
                   <div class="invisible max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100">
-                    texto
+                    El centro es un mundo completamente distinto a todo lo que conocemos. Aquí se encuentran las temperaturas más frías jamás registradas en la Tierra, alcanzando los –89 °C en la estación Vostok. El paisaje es plano, blanco y silencioso, sin montañas visibles ni animales en la superficie. Es el lugar más inhóspito del planeta.
+La vida, aun así, existe, pero escondida. Los lagos subglaciales —como el famoso Lago Vostok— son ecosistemas cerrados, aislados del exterior por millones de años. En ellos prosperan microorganismos extremófilos que sobreviven a la oscuridad absoluta, a la presión extrema y a una disponibilidad mínima de nutrientes. Estos seres son tan excepcionales que muchos científicos los estudian como modelo para imaginar cómo podría ser la vida en otros planetas helados, como Europa o Encélado.
+No hay flora visible, ni animales, ni nada que recuerde a un ecosistema terrestre típico. Aquí, el hielo manda, y la vida se adapta a escalas microscópicas.
+
                   </div>
                 </div>
 
@@ -149,7 +169,7 @@
 
               <!-- BOTÓN — AHORA DEBAJO Y CENTRADO -->
               <div class="text-center mt-6">
-  <a href="SUBCARPETAS/sudamericaf.html" class="btn-hongos">
+  <a href="SUBCARPETAS/antartidaf.html" class="btn-hongos">
     Ver Hongos
   </a>
 </div>
