--- a/asia.html
+++ b/asia.html
@@ -37,10 +37,10 @@
       <li><a href="index.html">Presentación</a></li>
       <li><a href="europa.html">Europa</a></li>
       <li><a href="asia.html">Asia</a></li>
-      <li><a href="norteamerica.html">Norteamérica</a></li>
+      <li><a href="america.html">América</a></li>
       <li><a href="oceania.html">Oceanía</a></li>
       <li><a href="africa.html">África</a></li>
-      <li><a href="sudamerica.html">Sudamerica</a></li>
+      <li><a href="antartida.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -53,7 +53,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-      style="background-image: url(img/europa.jpg)">
+      style="background-image: url(img/asia.jpg)">
       <span id="blackOverlay"
         class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
@@ -101,7 +101,9 @@
                     </div>
                     <div
                       class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                      Siberia y las regiones árticas del norte asiático...
+                     Siberia y las regiones árticas del norte asiático parecen diseñadas para poner a prueba la vida. Fríos intensos, inviernos interminables y veranos cortos moldean un paisaje que se mueve entre tundras congeladas y taigas profundas.
+ Los bosques de coníferas, infinitos, son hogar de animales imponentes como el tigre siberiano, el oso pardo y el lince. Aunque existen ciudades como Yakutsk, la mayoría del territorio permanece prácticamente vacío, donde la naturaleza sigue dictando las reglas.
+
                     </div>
                   </div>
 
@@ -115,7 +117,9 @@
                     </div>
                     <div
                       class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                      El sur asiático es una explosión de vida...
+                     El sur asiático es una explosión de vida. Desde la humedad abrumadora de las selvas tropicales en India y Sri Lanka, hasta los bosques secos y sabanas del centro del subcontinente, el clima monzónico hace que todo cambie drásticamente según la estación.
+ Aquí viven elefantes asiáticos, rinocerontes, tigres de Bengala y una infinidad de aves coloridas. Las ciudades —Bombay, Delhi, Karachi— son inmensas, pero los humedales, manglares y reservas como Sundarbans mantienen una lucha constante para conservar su espacio frente al crecimiento humano.
+
                     </div>
                   </div>
 
@@ -129,7 +133,9 @@
                     </div>
                     <div
                       class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                      Lorem ipsum dolor sit amet...
+                      El este asiático combina modernidad y naturaleza de manera única. Los bosques de bambú, las montañas húmedas y los ríos lentos forman un paisaje que parece pintado. El clima va del templado al subtropical, y la flora incluye cerezos que florecen como nubes rosadas en primavera.
+ Japón, China y Corea albergan fauna emblemática como el panda gigante, los ciervos sika y aves migratorias que descansan en humedales costeros. Tokio, Shanghái y Seúl son centros urbanos gigantes, pero la naturaleza aún persiste en parques nacionales y montañas que parecen resistirse a desaparecer.
+
                     </div>
                   </div>
 
@@ -143,7 +149,9 @@
                     </div>
                     <div
                       class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                      texto
+                     En el oeste, el clima árido modela la vida. Los desiertos del Medio Oriente parecen interminables, con dunas que cambian de forma cada día. Entre acacias y arbustos desérticos sobreviven camellos, gacelas y reptiles adaptados al calor extremo.
+ Ciudades como Dubái, Riad o Teherán contrastan fuertemente con las montañas y llanuras secas que las rodean. A pesar de la intervención humana, grandes extensiones continúan casi intactas, atravesadas solo por caravanas, carreteras y el viento.
+
                     </div>
                   </div>
 
@@ -157,7 +165,9 @@
                     </div>
                     <div
                       class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                      texto
+                     Las estepas de Kazajistán y Mongolia son paisajes abiertos, amplios, donde el horizonte parece infinito. El clima continental extremo crea veranos calurosos e inviernos helados.
+ La flora se reduce a pastizales duros y arbustos, pero la fauna es sorprendente: caballos salvajes de Przewalski, águilas entrenadas por cazadores tradicionales, camellos bactrianos y manadas de saigas. Mongolia, especialmente, conserva vastas zonas donde la humanidad apenas ha dejado huella.
+
                     </div>
                   </div>
 
