--- a/europa.html
+++ b/europa.html
@@ -37,14 +37,14 @@
   <input class="hidden" type="checkbox" id="menu-toggle" />
 
   <div class="menu" id="menu">
-    <ul>
+     <ul>
       <li><a href="index.html">Presentación</a></li>
       <li><a href="europa.html">Europa</a></li>
       <li><a href="asia.html">Asia</a></li>
-      <li><a href="norteamerica.html">Norteamérica</a></li>
+      <li><a href="america.html">América</a></li>
       <li><a href="oceania.html">Oceanía</a></li>
       <li><a href="africa.html">África</a></li>
-      <li><a href="sudamerica.html">Sudamerica</a></li>
+      <li><a href="antartida.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
@@ -92,7 +92,9 @@
            class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
     </div>
     <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-      Siberia y las regiones árticas del norte asiático parecen diseñadas para poner a prueba la vida...
+      En el norte, el paisaje se vuelve casi místico. Noruega, Suecia, Finlandia e Islandia están envueltos por un clima frío que, lejos de apagar la vida, crea ecosistemas muy particulares. Los bosques boreales —coníferas rectas, abedules plateados y suelos tapizados de musgo— se extienden por kilómetros sin interrupción. Los renos deambulan en manadas, y los zorros árticos se mimetizan con la nieve que domina los inviernos eternos.
+ La presencia humana se concentra en ciudades pequeñas pero modernas como Oslo o Helsinki, que parecieran convivir respetuosamente con los fiordos, montes y tundras que las rodean. Islandia, con sus paisajes volcánicos casi lunáticos, ofrece uno de los pocos lugares del mundo donde el hombre aún parece un visitante, no un residente.
+
     </div>
   </div>
 
@@ -103,7 +105,9 @@
            class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
     </div>
     <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-      El sur asiático es una explosión de vida...
+     El sur europeo es un contraste total: calor, luz intensa, suelos secos y vegetación adaptada a vivir con muy poca lluvia. Aquí reina el clima mediterráneo, con terrenos donde los olivares, los viñedos y los bosques de encinas se mezclan con ciudades antiguas asentadas desde hace milenios.
+ En Italia, España o Grecia, la mano humana ha esculpido el paisaje durante siglos, pero aún sobreviven reservas como Doñana, los Apeninos o los montes Pindo, donde jabalíes, linces y aves rapaces sobrevuelan valles rocosos y montes perfumados por el romero y el tomillo. El Mediterráneo es un ecosistema social y natural al mismo tiempo: cada pueblo costero cuenta una historia, pero cada cabo, bosque y acantilado guarda otra contada por el viento y el mar.
+
     </div>
   </div>
 
@@ -114,7 +118,9 @@
            class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
     </div>
     <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-      Lorem ipsum dolor sit amet...
+      Hacia el este, la naturaleza se vuelve más extensa y menos intervenida. Las estepas ucranianas y los bosques mixtos de Bielorrusia y Rusia occidental parecen no terminar nunca. El clima es templado continental, con estaciones muy marcadas que transforman el paisaje: inviernos blancos y silenciosos, primaveras explosivas, veranos verdes, otoños dorados.
+ Aquí se refugian lobos, linces, osos pardos y una gran variedad de aves migratorias que aprovechan los humedales estacionales. Las ciudades existen, claro —Kiev, Minsk—, pero fuera de ellas aún se respira una sensación de inmensidad.
+
     </div>
   </div>
 
@@ -125,7 +131,9 @@
            class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
     </div>
     <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-      texto
+      El oeste es el corazón urbano de Europa: París, Berlín, Bruselas, Ámsterdam. Aun así, entre cada ciudad aparecen bosques antiguos, ríos lentos y paisajes agrícolas que mantienen cierta armonía ecológica.
+ El clima templado húmedo nutre bosques de robles, hayas y abedules, donde ciervos y jabalíes se abren camino al amanecer. Aunque la presencia humana es fuerte, muchos países cuidan celosamente sus reservas naturales, dejando corredores verdes que conectan hábitats entre áreas densamente pobladas.
+
     </div>
   </div>
 
@@ -136,7 +144,9 @@
            class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"/>
     </div>
     <div class="invisible h-auto max-h-0 opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-      texto
+      Los Alpes y regiones alpinas dominan el centro europeo. Aquí el aire es fresco incluso en verano, los valles son verdes y los picos nevados parecen vigilar el paisaje.
+ La flora se adapta según la altitud: coníferas abajo, praderas floridas a media altura, rocas desnudas arriba. Íbices, marmotas y águilas sobrevuelan las pendientes, ajenos al paso del tiempo. Ciudades como Zúrich o Múnich existen como pequeñas islas urbanas dentro de un mar de montañas y bosques que aún conservan una sensación de intocabilidad.
+
     </div>
   </div>
 
