--- a/oceania.html
+++ b/oceania.html
@@ -34,15 +34,16 @@
   <input class="hidden" type="checkbox" id="menu-toggle" />
 
   <div class="menu" id="menu">
-    <ul>
+     <ul>
       <li><a href="index.html">Presentación</a></li>
       <li><a href="europa.html">Europa</a></li>
       <li><a href="asia.html">Asia</a></li>
-      <li><a href="norteamerica.html">Norteamérica</a></li>
+      <li><a href="america.html">América</a></li>
       <li><a href="oceania.html">Oceanía</a></li>
       <li><a href="africa.html">África</a></li>
-      <li><a href="sudamerica.html">Sudamérica</a></li>
+      <li><a href="antartida.html">Antartida</a></li>
     </ul>
+  </div>
   </div>
 </nav>
 
@@ -53,7 +54,7 @@
 <main class="profile-page">
   <section class="relative block h-500-px">
     <div class="absolute top-0 w-full h-full bg-center bg-cover"
-      style="background-image: url(img/europa.jpg)">
+      style="background-image: url(img/Oceania.avif)">
       <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
     </div>
 
@@ -99,7 +100,9 @@
                   <div
                     class="invisible h-auto max-h-0 items-center opacity-0 transition-all 
                     group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    Siberia y las regiones árticas del norte asiático parecen diseñadas para poner a prueba la vida...
+                    Las islas del Pacífico norte son pequeñas joyas tropicales. La humedad es constante, el clima siempre cálido y los bosques tropicales se mezclan con playas coralinas.
+ La flora está dominada por palmeras, helechos gigantes y pandanos; la fauna, por aves exóticas, murciélagos y una biodiversidad marina extraordinaria. La presencia humana suele ser mínima, a menudo limitada a pequeñas aldeas o pueblos costeros.
+
                   </div>
                 </div>
 
@@ -115,7 +118,10 @@
                   <div
                     class="invisible h-auto max-h-0 items-center opacity-0 transition-all 
                     group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    El sur asiático es una explosión de vida...
+                   Nueva Zelanda y el sur de Australia forman una región de contrastes: montañas nevadas, bosques verdes y llanuras secas donde el viento sopla sin obstáculos.
+ Los ecosistemas neozelandeses están poblados por helechos gigantes, árboles kauri y animales tan particulares como el kiwi. En Australia, eucaliptos y acacias dominan el paisaje, ofreciendo refugio a koalas, canguros, wombats y cacatúas.
+ Ciudades como Melbourne o Wellington existen como bolsillos urbanos rodeados de naturaleza que aún conserva su carácter salvaje.
+
                   </div>
                 </div>
 
@@ -131,7 +137,9 @@
                   <div
                     class="invisible h-auto max-h-0 items-center opacity-0 transition-all 
                     group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    Lorem ipsum dolor sit amet...
+                    La Polinesia es un mosaico de islas volcánicas rodeadas de lagunas azules. El clima tropical marino da vida a selvas espesas y arrecifes multicolores.
+ La fauna terrestre es limitada por el tamaño de las islas, pero la vida marina es deslumbrante: tortugas, peces de colores, tiburones y corales vibrantes. La intervención humana es leve, manteniendo un equilibrio frágil pero aún presente.
+
                   </div>
                 </div>
 
@@ -147,7 +155,9 @@
                   <div
                     class="invisible h-auto max-h-0 items-center opacity-0 transition-all 
                     group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    texto
+                    El oeste australiano es árido, vasto y silencioso. Los desiertos interiores parecen no terminar nunca, interrumpidos solo por formaciones rocosas sagradas para las culturas aborígenes.
+ La flora está compuesta de matorrales, eucaliptos resistentes y acacias. La fauna incluye emúes, reptiles, canguros rojos y una enorme diversidad de insectos adaptados al calor. Perth es la principal ciudad, aislada frente a un océano de tierras casi intocadas.
+
                   </div>
                 </div>
 
@@ -163,7 +173,9 @@
                   <div
                     class="invisible h-auto max-h-0 items-center opacity-0 transition-all 
                     group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000">
-                    texto
+                    Papúa Nueva Guinea es un mundo en sí mismo: montañoso, húmedo y exuberante. Sus selvas son tan densas que muchas zonas aún no han sido completamente exploradas.
+ La flora incluye orquídeas rarísimas, árboles gigantes y palmas. La fauna es igual de exótica: aves del paraíso, marsupiales arborícolas y reptiles únicos. La humanidad aquí convive con la naturaleza, no la domina.
+
                   </div>
                 </div>
 
