--- a/formulario.html
+++ b/formulario.html
@@ -37,14 +37,14 @@
   <input class="hidden" type="checkbox" id="menu-toggle" />
 
   <div class="menu" id="menu">
-    <ul>
+     <ul>
       <li><a href="index.html">Presentación</a></li>
       <li><a href="europa.html">Europa</a></li>
       <li><a href="asia.html">Asia</a></li>
-      <li><a href="norteamerica.html">Norteamérica</a></li>
+      <li><a href="america.html">América</a></li>
       <li><a href="oceania.html">Oceanía</a></li>
       <li><a href="africa.html">África</a></li>
-       <li><a href="sudamerica.html">Sudamerica</a></li>
+      <li><a href="antartida.html">Antartida</a></li>
     </ul>
   </div>
 </nav>
